# not-yet

./: .gitignore  Cargo.toml  README.md  flake.nix  test.json
app-bot/: Cargo.toml
app-bot/src/: config.rs  init.rs  lib.rs  rss.rs  token.rs
app-bot/src/authenticator/: mod.rs  priority.rs  sqlite.rs  whitelist.rs
app-bot/src/db/: atom.rs  broadcast.rs  broadcast_rss.rs  dialog.rs  error.rs  header.rs  mod.rs  notify.rs  rss.rs  subscription.rs  user.rs
app-bot/src/telegram/: args.rs  clarify.rs  command.rs  mod.rs  renotify.rs  repmark.rs  state.rs  update_echo.rs
app-bot/src/telegram/optimize/: mod.rs  renotify.rs
app-cli/: Cargo.toml
app-cli/asset/: default_config.toml
app-cli/src/: args.rs  config.rs  lib.rs
app-common/: Cargo.toml
app-common/src/: config.rs  feed.rs  lib.rs  meta.rs  poller.rs  rss.rs  verbosity.rs
lib-bot/: Cargo.toml
lib-bot/src/: config.rs  lib.rs
lib-bot/src/authenticator/: priority.rs  whitelist.rs
lib-bot/src/db/: mod.rs  rss.rs  subscription.rs
lib-bot/src/telegram/: mod.rs  state.rs
lib-cli/: Cargo.toml
lib-cli/src/: args.rs  lib.rs
lib-common/: Cargo.toml
lib-common/prompt/: judge_with_history.xml  judge_without_history.xml
lib-common/src/: config.rs  error.rs  lib.rs  ollama.rs
lib-common/src/agent/: error.rs  ext.rs  mod.rs  template.rs
lib-common/src/agent/decision/: llm.rs  mod.rs
lib-common/src/agent/decision/prompt/: judge.xml  sanitize.xml
lib-common/src/agent/memory/: debug.rs  mod.rs
lib-common/src/agent/memory/criteria/: debug.rs  mod.rs  sqlite.rs
lib-common/src/agent/memory/decision/: debug.rs  material.rs  mod.rs
lib-common/src/agent/memory/decision/sqlite/: mod.rs  test.rs
lib-common/src/agent/memory/dialog/: debug.rs  fs.rs  mod.rs  sqlite.rs
lib-common/src/agent/memory/sqlite/: decision.rs  material.rs  mod.rs  test.rs
lib-common/src/agent/optimize/: dialog-hn.rmp  gemma4.rs  llm.rs  mod.rs  prompt.xml  system_prompt.xml  test.rs
lib-common/src/channel/: mpsc.rs
lib-common/src/llm/: async_runner.rs  default.rs  mod.rs  owned.rs  timeout.rs
lib-common/src/llm/dialog/: gemma4.rs  mod.rs  parse.rs  toolcall.rs
lib-common/src/llm/dialog/gemma4/: assistant.rs  error.rs  mod.rs  req.rs  template.rs  test.rs  tool.rs  turn.rs
lib-common/src/polling/: mod.rs  schedule.rs  task.rs  test.rs
lib-common/src/runner/: mod.rs  ollama.rs
lib-common/src/source/: atom.rs  mod.rs  rss.rs  utils.rs
lib-common/src/update/: accept.rs  mod.rs  persistence.rs  sqlite.rs  test.rs  updatable.rs
lib-common/src/update/test/: hn-newest-08-18.xml  hn-newest-09-21.xml  hn-newest-11-30.xml  hn-newest-18-57.xml  mod.rs
migration/: Cargo.toml
migration/src/: id_broadcast.rs  id_msg_id_by_dialog_id.rs  id_notify.rs  id_subscription.rs  id_user.rs  lib.rs  m20260329_113855_create_tables.rs  m20260402_020348_add_agent_id_to_mem.rs  m20260402_084610_create_bot_db_tables.rs  m20260404_171109_add_bot_db_sub_kind.rs  m20260404_171549_create_bot_db_atom_table.rs  m20260405_071428_add_bot_db_sub_buffer_size.rs  m20260414_034251_drop_update_key_unique_constraint.rs  m20260501_112246_add_criteria_mem_table.rs  m20260501_134800_add_bot_db_msg_id_by_dialog_id.rs  m20260531_104434_add_bot_channel.rs  m20260602_055534_add_bot_dialog_chat_id.rs  m20260602_064052_change_bot_msg_id_by_dialog_id_pk.rs  m20260607_041240_add_bot_broadcast.rs
nix/: module.nix  package.nix
priority-authenticator/: Cargo.toml
priority-authenticator/src/: lib.rs
prompt/: judge_with_history.xml  judge_without_history.xml
src/: main.rs  secure.rs
src/agent/: error.rs  memory.rs  mod.rs  template.rs
src/agent/memory/: debug.rs  mod.rs
src/agent/memory/sqlite/: decision.rs  error.rs  mod.rs  test.rs
src/bot/: mod.rs
src/cli/: args.rs  config.rs  default_config.toml  mod.rs
src/llm/: mod.rs  owned.rs
src/polling/: error.rs  mod.rs  schedule.rs  task.rs  trigger.rs
src/serde_utils/: dyn_image.rs  mod.rs
src/source/: mod.rs  rss.rs
src/update/: accept.rs  mod.rs  sqlite.rs
