[package]
name = "not_yet"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "lib-bot", "lib-cli", "lib-common", "migration", "priority-authenticator"]

[workspace.dependencies]
tracing-subscriber = "0.3"
tracing = "0.1"
tokio = { version = "1.50", features = ["rt-multi-thread", "sync"] }
anyhow = "1.0.102"
sea-orm = { version = "2.0.0-rc", features = [
	"sqlx-sqlite",
	"macros",
	"with-time",
	"runtime-tokio",
] }
llama-runner = "1.0.0"
serde = { version = "1.0", features = ["derive", "rc"] }
smol_str = { version = "0.3.6", features = ["serde"] }
reqwest = "0.13.2"
futures = "0.3.32"
thiserror = "2.0.18"
trait-variant = "0.1.2"

[dependencies]
lib-common = { path = "lib-common" }
lib-bot = { path = "lib-bot", optional = true }
lib-cli = { path = "lib-cli", optional = true }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync"] }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"

[features]
default = ["dep:lib-cli"]
cuda = ["lib-common/cuda"]
metal = ["lib-common/metal"]
bot = ["dep:lib-bot"]
telegram = ["bot", "lib-bot/telegram"]
