[package]
name = "not_yet"
version = "0.2.2"
edition = "2024"

[workspace]
members = [
	".",
	"app-bot",
	"app-cli",
	"app-common",
	"lib-common",
	"migration",
	"priority-authenticator",
]

[workspace.dependencies]
tracing-subscriber = "0.3"
tracing = "0.1"
tokio = { version = "1.50", features = ["rt-multi-thread", "sync"] }
anyhow = "1.0.102"
sea-orm = { version = "2.0.0-rc", features = [
	"sqlx-sqlite",
	"macros",
	"with-time",
	"runtime-tokio",
] }
llama-runner = { version = "2.2.0", features = ["mcp"] }
serde = { version = "1.0", features = ["derive", "rc"] }
smol_str = { version = "0.3.6", features = ["serde"] }
reqwest = "0.13.2"
futures = "0.3.32"
thiserror = "2.0.18"
trait-variant = "0.1.2"
toml = "1.1.0"
dirs = "6.0.0"
async-stream = "0.3.6"

[dependencies]
lib-common = { path = "lib-common" }
app-bot = { path = "app-bot", optional = true }
app-cli = { path = "app-cli", optional = true }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync"] }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"

[features]
default = ["dep:app-cli"]
cuda = ["lib-common/cuda"]
metal = ["lib-common/metal"]
bot = ["dep:app-bot"]
telegram = ["bot", "app-bot/telegram"]
