[package]
name = "app-common"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-common = { path = "../lib-common" }
migration = { path = "../migration" }
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
tracing.workspace = true
sea-orm.workspace = true
toml.workspace = true
dirs.workspace = true

