[package]
name = "lib-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "../migration" }
lib-common = { path = "../lib-common" }
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
humantime-serde = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.18.0"
tracing.workspace = true
tracing-subscriber.workspace = true
smol_str.workspace = true
sea-orm.workspace = true
llama-runner.workspace = true
anyhow.workspace = true
reqwest.workspace = true
futures.workspace = true

[features]
cuda = ["lib-common/cuda"]
metal = ["lib-common/metal"]
