[package]
name = "lib-common"
version = "0.1.0"
edition = "2024"

[dependencies]
escaping = "0.2.3"
image = "0.25.10"
llama-runner.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json = "1.0"
smol_str.workspace = true
rss = { version = "2.0.12", features = ["serde"] }
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand = "0.10.0"
migration = { path = "../migration" }
sea-orm.workspace = true
cron = "0.16.0"
tokio = { version = "1.50", features = ["sync"] }
chrono = "0.4.44"
tracing-test = "0.2.6"
atom_syndication = { version = "0.12.7", features = ["serde"] }
quick-xml = { version = "0.39.2", features = ["encoding"] }
encoding_rs = "0.8.35"
uuid = { version = "1.23.0", features = ["v4"] }
rmp-serde = "1.3.1"
sha2 = "0.11.0"
async-stream = "0.3.6"
toml = "1.1.0"
dirs = "6.0.0"
async-trait = "0.1.89"
pin-project-lite = "0.2.17"
serde_with = "3.18.0"
humantime-serde = "1.1.1"
trait-variant.workspace = true

[features]
cuda = ["llama-runner/cuda"]
metal = ["llama-runner/metal"]
